Prevent button component stretching
Items that are part of a flex layout stretch to fill available space. Implement this behavior only via a separate button variant in order to preserve button default size unless explicitly stated otherwise.

--- a/source/components/button.scss
+++ b/source/components/button.scss
@@ -7,6 +7,7 @@
 .button {
   display: inline-flex;
   justify-content: center;
+  align-self: start;
   align-items: center;
   gap: $space-small-d;
   padding: $space-small-b $space-standard;
